--- a/erldns.config.example
+++ b/erldns.config.example
@@ -17,7 +17,7 @@
         {credentials, {"username", "password"}}
       ]},
       {pools, [
-          {tcp_worker_pool, [
+          {tcp_worker_pool, erldns_worker, [
               {size, 10},
               {max_overflow, 20}
             ]}
